--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.12.0",
+    "animate.css": "^4.1.1",
     "nuxt": "^2.14.0",
     "vue-parallaxy": "^1.1.1"
   },
